# FeastFleet-

./: README.md  app.py  pyproject.toml
attached_assets/: Pasted--AI-Powered-Cloud-Kitchen-Food-Delivery-App-Advanced-Real-Time-Features-This-AI-pow-1743697985772.txt  Pasted--AI-Powered-Cloud-Kitchen-Food-Delivery-App-An-AI-driven-cloud-kitchen-app-that-allows--1743697969944.txt
data/: app_data.json
pages/: 1_Vendor_Registration.py  2_Restaurants.py  3_Orders_Tracking.py  4_Profile.py  5_Document_Scanner.py  6_Recipe_Generator.py
static/: logo.py
utils/: authentication.py  data_store.py  deepseek_ai.py  geo_utils.py  notification_service.py  recipe_scraper.py  youtube_utils.py
